--- a/index.html
+++ b/index.html
@@ -208,6 +208,13 @@
                         <div class="swiper portfolio pb-5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://vitanur.com/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/vitanur.svg" alt="">
+                                        <span class="position-absolute text-current text-uppercase fw-700">Vitanur</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide position-relative portfolio-back">
                                     <a href="https://expargo.net/" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center align-items-center">
                                         <img src="./assets/img/groupage.svg" alt="">
